--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>SpaceX - Falcon 9</title>
-        <link rel="stylesheet" type="text/css" href="headerStyle.css">
-        <link rel="stylesheet" type="text/css" href="heroImageStyle.css">
-        <link rel="stylesheet" type="text/css" href="statisticsStyle.css"> 
-        <link rel="stylesheet" type="text/css" href="parametersStyle.css"> 
-        <link rel="stylesheet" type="text/css" href="videoStyle.css"> 
-        <link rel="stylesheet" type="text/css" href="footerStyle.css"> 
+        <link rel="stylesheet" type="text/css" href="css/common.css">
+        <link rel="stylesheet" type="text/css" href="css/indexStyle.css">
 
     </head>
     <body>
@@ -16,99 +12,97 @@
             <header>
                 <nav>
                     <div class="mainMenu">
-                        <img id="logoImage" src="assets/logo.png" alt="">
-                            <div class="navLinks">
-                                <a href="">FALCON 9</a>
-                                <a href="">FALCON HEAVY</a>
-                                <a href="">DRAGON</a>
-                                <a href="">STARSHIP</a>
-                                <a href="">HUMAN SPACEFLIGHT</a>
-                                <a href="">RIDESHARE</a>
-                            </div>
+                        <a href="index.html">
+                            <img id="logoImage" src="assets/logo.png" alt="">
+                        </a>
+                        <a class="navLinks" href="">FALCON 9</a>
+                        <a class="navLinks" href="">FALCON HEAVY</a>
+                        <a class="navLinks" href="">DRAGON</a>
+                        <a class="navLinks" href="">STARSHIP</a>
+                        <a class="navLinks" href="">HUMAN SPACEFLIGHT</a>
+                        <a class="navLinks" href="">RIDESHARE</a>
                     </div>
                     
                     <div class="rightMenu">
-                        <div class="navLinks">
-                            <a href="">SHOP</a>
-                            <a href="">
-                                <img id="menuIcon" src="assets/menuIcon.png" alt="">
-                            </a>
-                        </div>
+                        <a href="" class="navLinks">SHOP</a>
+                        <a href="">
+                            <img id="menuIcon" src="assets/menuIcon.png" alt="">
+                        </a>
                     </div>
                 </nav>
             </header>
 
-            <div class="heroImage">
-                <div class="headlines">
-                    <h1>FALCON 9</h1>
-                    <h3>FIRST ORBITAL CLASS ROCKET CAPABLE OF REFLIGHT </h3>
+            <main>
+                <section id="heroImage">
+                    <div class="headlines">
+                        <h1>FALCON 9</h1>
+                        <h3>FIRST ORBITAL CLASS ROCKET CAPABLE OF REFLIGHT </h3>
+                    </div>
+                </section>
+ 
+                <div class="statistics">
+                    <table id="tableStatistics">
+                        <tbody>
+                            <tr class="number">
+                                <td>125</td>
+                                <td>85</td>
+                                <td>67</td>
+                            </tr>
+                            <tr class="label">
+                                <td>TOTAL LAUNCHES</td>
+                                <td>TOTAL LANDING</td>
+                                <td>REFLOWN ROCKETS</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-            </div>
 
-            <div class="statistics">
-                <table id="tableStatistics">
-                    <tbody>
-                        <tr class="number">
-                            <td>125</td>
-                            <td>85</td>
-                            <td>67</td>
-                        </tr>
-                        <tr class="label">
-                            <td>TOTAL LAUNCHES</td>
-                            <td>TOTAL LANDING</td>
-                            <td>REFLOWN ROCKETS</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                <section id="overview">
+                    <div class="overviewTable">
+                        <h3>FALCON 9</h2>
+                        <h2>OVERVIEW</h1>
+                        <table>
+                            <tr>
+                                <td>HEIGHT</td>
+                                <td>70 m <span>/ 229.6 ft</span></td>
+                            </tr>
+                            <tr>
+                                <td>DIAMETER</td>
+                                <td>3.7 m <span>/ 12 ft</span></td>
+                            </tr>
+                            <tr>
+                                <td>MASS</td>
+                                <td>549,054 kg <span>/ 1,207,920 lb</span></td>
+                            </tr>
+                            <tr>
+                                <td>PAYLOAD TO LEO</td>
+                                <td>22,800 kg <span>/ 50,265 lb</span></td>
+                            </tr>
+                            <tr>
+                                <td>PAYLOAD TO GTO</td>
+                                <td>8,300 kg <span>/ 18,300 lb</span></td>
+                            </tr>
+                            <tr>
+                                <td>PAYLOAD TO MARS</td>
+                                <td>4,020 kg <span>/ 8,860 lb</span></td>
+                            </tr>
+                        </table>
+                    </div>
+                </section>
 
-            <div class="parameters">
-                <h2 id="smallerHeadline">FALCON 9</h2>
-                <h1 id="paramHeadline">OVERVIEW</h1>
-                <table id="tableParameters">
-                    <tr>
-                        <td>HEIGHT</td>
-                        <td class="measure">70 m </td>
-                        <td class="anotherMeasure">/ 229.6 ft</td>
-                    </tr>
-                    <tr>
-                        <td>DIAMETER</td>
-                        <td class="measure">3.7 m </td>
-                        <td class="anotherMeasure">/ 12 ft</td>
-                    </tr>
-                    <tr>
-                        <td>MASS</td>
-                        <td class="measure">549,054 kg </td>
-                        <td class="anotherMeasure">/ 1,207,920 lb</td>
-                    </tr>
-                    <tr>
-                        <td>PAYLOAD TO LEO</td>
-                        <td class="measure">22,800 kg </td>
-                        <td class="anotherMeasure">/ 50,265 lb</td>
-                    </tr>
-                    <tr>
-                        <td>PAYLOAD TO GTO</td>
-                        <td class="measure">8,300 kg </td>
-                        <td class="anotherMeasure">/ 18,300 lb</td>
-                    </tr>
-                    <tr>
-                        <td>PAYLOAD TO MARS</td>
-                        <td class="measure">4,020 kg </td>
-                        <td class="anotherMeasure">/ 8,860 lb</td>
-                    </tr>
-                </table>
-            </div>
-
-            <a id="playVideo" href="video.html">
-                <div class="video"> 
-                    <img class="playButton" src="assets/play.png" alt="">
-                    <h3>VIDEO</h3>
-                    <h2 class>FALCON 9 IN </br> FLIGHT</h2>
-                </div>
-            </a>
+                <a id="playVideo" href="video.html">
+                    <section id="video"> 
+                        <img class="playButton" src="assets/play.png" alt="">
+                        <div class="headlineVideo">
+                            <h3>VIDEO</h3>
+                            <h2 class>FALCON 9 IN </br> FLIGHT</h2>
+                        </div>
+                    </section>
+                </a>
+            </main>
 
             <footer>
-                <div class="footer">
+                <nav>
                     <span>SPACEX © 2021</span>
                     <a href="">TWITTER</a>
                     <a href="">YOUTUBE</a>
@@ -116,8 +110,7 @@
                     <a href="">FLICKR</a>
                     <a href="">LINKEDIN</a>
                     <a href="">PRIVACY POLICY</a>
-
-                </div>
+                </nav>
             </footer>
         </div>
     </body>
